fix overlap

--- a/millendsparkCSS/millendspark.css
+++ b/millendsparkCSS/millendspark.css
@@ -26,7 +26,7 @@ html, body{
 	text-align: center;
 	padding-top: 10px;
 }
-.socials-container{
+/*.socials-container{
 	width: 120px;
 	display: inline-flex;
 	text-align: center;
@@ -36,7 +36,7 @@ html, body{
 	left: 0;
 	right: 0;
 	bottom: 5vh;
-}
+}*/
 .logo-container{
 	margin: 10px;
 }
